--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "firebase-admin": "^8.12.1",
+    "node-cron": "^2.0.3",
     "puppeteer": "^3.3.0"
   }
 }
